# playground

./: .gitignore
android/: .dir-locals.el  app.nix  build.nix  default.nix  result  sdk.nix  shell.nix
clojure/: monad.clj  state.clj
elixir/: a.ex  b.ex
elm/: .gitignore
fah/: Makeflow  SetClientConfig.py  client.cfg.template  crc.sh
haskell/: CatchIOMonad.hs  DerivingFoldableTraversable.hs  chaos.hs  cse30332.lhs  data-structures.hs  exceptions.hs  hakflow.cabal  makeflow.hs  monad.hs  sieve.hs  state.hs  tree.hs  typefu.hs  vector.hs  xml.hs  xmltest.xml
haskell/Makeflow/: Commands.hs  Monad.hs  Run.hs  Test.hs  Util.hs  Workflow.hs
haskell/algorithms/: Median.hs  PruneNSearch.hs
haskell/dependent-types/: .dir-locals.el  Main.hs  shell.nix
haskell/evolve_string/: Evolve.hs  shell.nix
haskell/hPDB/: shell.nix
haskell/hPDB/nix/: hPDB.nix
haskell/honcho/: Makeflow.hs  Options.hs
haskell/honcho/Makeflow/: Commands.hs  Monad.hs
haskell/kdtree/: shell.nix  test.hs
haskell/protein_space_search/: shell.nix  test.hs
haskell/protein_space_search/nix/: Octree.nix  iterable.nix  kdt.nix  pretty.nix  prettyNcols.nix
haskell/recursion-schemes-play/: ChangeLog.md  LICENSE  Main.hs  config.nix  default.nix  recursion-schemes-play.cabal  shell.nix
haskell/recursion-schemes-play/nix/: happy.nix  language-python.nix
haskell/sim/: LICENSE  sim.cabal
haskell/sim/Math/: Sim.hs  Vector.hs  sim.hs
makeflow/: example.makeflow
python/: args.py  combinators.py  cps.py  decorators.py  inheritance.py  list.py  list.txt  monad.py  state.py
(+46 files in other folders)
